fix: center align icons for Edge (not Beta)

--- a/singolo1.css
+++ b/singolo1.css
@@ -186,6 +186,7 @@ body {
   margin-right: 20px;
 
   justify-content: center;
+  align-items: center;
 
   border: 1.5px solid #666d89;
   border-radius: 50%;
